# docs/swagger.json
@@ -1417,7 +1417,19 @@
                     "201": {
                         "description": "Successfully created department",
                         "schema": {
-                            "$ref": "#/definitions/domain.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/domain.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/domain.Department"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
